# simset

./: MANIFEST.in  README.md  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: commit.yml  pull_requests.yml
src/simset/: __init__.py  __main__.py  command_line.py  initialize.py  parser.py  post_processing.py  simulate.py
src/simset/templates/: README.md.j2  bash.sh.j2  configuration.condor.j2  main.py.j2  simset_setup.py.j2
tests/: dummy_test.py  requirements.txt
