[metadata]
name = simset
version = 0.0.1
author = Hampus Malmberg
author_email = hampus.malmberg88@gmail.com
description = A command line tool for setting up HPC computations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hammal/simset
project_urls =
    Bug Tracker = https://github.com/hammal/simset/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = jinja2
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    simset = simset.command_line:main


[flake8]
ignore =
    E501,
    W605,
    E203,
    F401,
    E402,
    W503,
    BLK100,
    E741,
    E712,
    F811
exclude =
    .git,
    __pycache__,
max-line-length = 88
